[package]
name = "chat-web-socket"
version = "0.1.0"
edition = "2021"

[dependencies]
socketioxide = { version = "0.15.0", features = ["state"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7.7"
serde = { version = "1.0" }
serde_json = "1.0"
tower-http = { version = "0.5.1", features = ["cors"] }
tower = "0.5.1"
chrono = { version = "0.4", features = ["serde"] }
